syntax = "proto3";

option csharp_namespace = "TelemetryGrpc";

message TelemetryEvent {
  string clientId = 1;
  string eventId = 2;
  int64 timestampUnixMs = 3;
  string payload = 4;
}

message TelemetryAck {
  string clientId = 1;
  string eventId = 2;
  int64 timestampUnixMs = 3;
  bool accepted = 4;
  string message = 5;  
}

service Telemetry {
  rpc Ingest(stream TelemetryEvent) returns (stream TelemetryAck);
}
